# serializer version: 1
# name: TestCartPoleCostEqual.test_reference_tracking_periodic_snapshot
  0.10958241942238534
# ---
# name: TestCartPoleCostEqual.test_reference_tracking_periodic_snapshot.1
  -0.024448624099179084
# ---
# name: TestCartPoleCostEqual.test_reference_tracking_periodic_snapshot.10
  -0.19298094228082074
# ---
# name: TestCartPoleCostEqual.test_reference_tracking_periodic_snapshot.11
  0.004398229425633801
# ---
# name: TestCartPoleCostEqual.test_reference_tracking_periodic_snapshot.12
  0.10469521751476796
# ---
# name: TestCartPoleCostEqual.test_reference_tracking_periodic_snapshot.13
  0.3836554311534694
# ---
# name: TestCartPoleCostEqual.test_reference_tracking_periodic_snapshot.14
  False
# ---
# name: TestCartPoleCostEqual.test_reference_tracking_periodic_snapshot.15
  False
# ---
# name: TestCartPoleCostEqual.test_reference_tracking_periodic_snapshot.16
  dict({
    'reference': 0.004398229425633801,
    'reference_constraint_error': -3.8909065530595983,
    'reference_constraint_position': 4.0,
    'reference_constraint_violated': False,
    'reference_error': 0.10469521751476796,
    'state_of_interest': 0.10909344694040175,
  })
# ---
# name: TestCartPoleCostEqual.test_reference_tracking_periodic_snapshot.17
  0.11283397455824112
# ---
# name: TestCartPoleCostEqual.test_reference_tracking_periodic_snapshot.18
  0.1373521677359711
# ---
# name: TestCartPoleCostEqual.test_reference_tracking_periodic_snapshot.19
  0.14115849335141145
# ---
# name: TestCartPoleCostEqual.test_reference_tracking_periodic_snapshot.2
  0.14343916796455297
# ---
# name: TestCartPoleCostEqual.test_reference_tracking_periodic_snapshot.20
  -0.07676570293056856
# ---
# name: TestCartPoleCostEqual.test_reference_tracking_periodic_snapshot.21
  0.00879645711491628
# ---
# name: TestCartPoleCostEqual.test_reference_tracking_periodic_snapshot.22
  0.10403751744332485
# ---
# name: TestCartPoleCostEqual.test_reference_tracking_periodic_snapshot.23
  0.3635097988816521
# ---
# name: TestCartPoleCostEqual.test_reference_tracking_periodic_snapshot.24
  False
# ---
# name: TestCartPoleCostEqual.test_reference_tracking_periodic_snapshot.25
  False
# ---
# name: TestCartPoleCostEqual.test_reference_tracking_periodic_snapshot.26
  dict({
    'reference': 0.00879645711491628,
    'reference_constraint_error': -3.887166025441759,
    'reference_constraint_position': 4.0,
    'reference_constraint_violated': False,
    'reference_error': 0.10403751744332485,
    'state_of_interest': 0.11283397455824112,
  })
# ---
# name: TestCartPoleCostEqual.test_reference_tracking_periodic_snapshot.27
  0.11558101791296055
# ---
# name: TestCartPoleCostEqual.test_reference_tracking_periodic_snapshot.28
  0.41483476162456334
# ---
# name: TestCartPoleCostEqual.test_reference_tracking_periodic_snapshot.29
  0.13962317929280008
# ---
# name: TestCartPoleCostEqual.test_reference_tracking_periodic_snapshot.3
  0.07894721162374557
# ---
# name: TestCartPoleCostEqual.test_reference_tracking_periodic_snapshot.30
  -0.44748678167775646
# ---
# name: TestCartPoleCostEqual.test_reference_tracking_periodic_snapshot.31
  0.013194681331496795
# ---
# name: TestCartPoleCostEqual.test_reference_tracking_periodic_snapshot.32
  0.10238633658146376
# ---
# name: TestCartPoleCostEqual.test_reference_tracking_periodic_snapshot.33
  0.35564428719480884
# ---
# name: TestCartPoleCostEqual.test_reference_tracking_periodic_snapshot.34
  False
# ---
# name: TestCartPoleCostEqual.test_reference_tracking_periodic_snapshot.35
  False
# ---
# name: TestCartPoleCostEqual.test_reference_tracking_periodic_snapshot.36
  dict({
    'reference': 0.013194681331496795,
    'reference_constraint_error': -3.8844189820870394,
    'reference_constraint_position': 4.0,
    'reference_constraint_violated': False,
    'reference_error': 0.10238633658146376,
    'state_of_interest': 0.11558101791296055,
  })
# ---
# name: TestCartPoleCostEqual.test_reference_tracking_periodic_snapshot.37
  0.12387771314545182
# ---
# name: TestCartPoleCostEqual.test_reference_tracking_periodic_snapshot.38
  0.5667135704060806
# ---
# name: TestCartPoleCostEqual.test_reference_tracking_periodic_snapshot.39
  0.13067344365924494
# ---
# name: TestCartPoleCostEqual.test_reference_tracking_periodic_snapshot.4
  0.0
# ---
# name: TestCartPoleCostEqual.test_reference_tracking_periodic_snapshot.40
  -0.6321720124467993
# ---
# name: TestCartPoleCostEqual.test_reference_tracking_periodic_snapshot.41
  0.01759290033902609
# ---
# name: TestCartPoleCostEqual.test_reference_tracking_periodic_snapshot.42
  0.10628481280642572
# ---
# name: TestCartPoleCostEqual.test_reference_tracking_periodic_snapshot.43
  0.3115336328691423
# ---
# name: TestCartPoleCostEqual.test_reference_tracking_periodic_snapshot.44
  False
# ---
# name: TestCartPoleCostEqual.test_reference_tracking_periodic_snapshot.45
  False
# ---
# name: TestCartPoleCostEqual.test_reference_tracking_periodic_snapshot.46
  dict({
    'reference': 0.01759290033902609,
    'reference_constraint_error': -3.876122286854548,
    'reference_constraint_position': 4.0,
    'reference_constraint_violated': False,
    'reference_error': 0.10628481280642572,
    'state_of_interest': 0.12387771314545182,
  })
# ---
# name: TestCartPoleCostEqual.test_reference_tracking_periodic_snapshot.47
  0.13521198455357342
# ---
# name: TestCartPoleCostEqual.test_reference_tracking_periodic_snapshot.48
  0.24856720024803347
# ---
# name: TestCartPoleCostEqual.test_reference_tracking_periodic_snapshot.49
  0.11803000341030895
# ---
# name: TestCartPoleCostEqual.test_reference_tracking_periodic_snapshot.5
  0.10958241942238534
# ---
# name: TestCartPoleCostEqual.test_reference_tracking_periodic_snapshot.50
  -0.12071230469371952
# ---
# name: TestCartPoleCostEqual.test_reference_tracking_periodic_snapshot.51
  0.021991112401156945
# ---
# name: TestCartPoleCostEqual.test_reference_tracking_periodic_snapshot.52
  0.11322087215241647
# ---
# name: TestCartPoleCostEqual.test_reference_tracking_periodic_snapshot.53
  0.25420065345796333
# ---
# name: TestCartPoleCostEqual.test_reference_tracking_periodic_snapshot.54
  False
# ---
# name: TestCartPoleCostEqual.test_reference_tracking_periodic_snapshot.55
  False
# ---
# name: TestCartPoleCostEqual.test_reference_tracking_periodic_snapshot.56
  dict({
    'reference': 0.021991112401156945,
    'reference_constraint_error': -3.8647880154464267,
    'reference_constraint_position': 4.0,
    'reference_constraint_violated': False,
    'reference_error': 0.11322087215241647,
    'state_of_interest': 0.13521198455357342,
  })
# ---
# name: TestCartPoleCostEqual.test_reference_tracking_periodic_snapshot.6
  dict({
    'reference': 0.0,
    'reference_constraint_error': -3.8904175805776147,
    'reference_constraint_position': 4.0,
    'reference_constraint_violated': False,
    'reference_error': 0.10958241942238534,
    'state_of_interest': 0.10958241942238534,
  })
# ---
# name: TestCartPoleCostEqual.test_reference_tracking_periodic_snapshot.7
  0.10909344694040175
# ---
# name: TestCartPoleCostEqual.test_reference_tracking_periodic_snapshot.8
  0.18702638089196827
# ---
# name: TestCartPoleCostEqual.test_reference_tracking_periodic_snapshot.9
  0.14501811219702787
# ---
# name: TestCartPoleCostEqual.test_reference_tracking_snapshot
  0.10958241942238534
# ---
# name: TestCartPoleCostEqual.test_reference_tracking_snapshot.1
  -0.024448624099179084
# ---
# name: TestCartPoleCostEqual.test_reference_tracking_snapshot.10
  -0.19298094228082074
# ---
# name: TestCartPoleCostEqual.test_reference_tracking_snapshot.11
  0.0
# ---
# name: TestCartPoleCostEqual.test_reference_tracking_snapshot.12
  0.10909344694040175
# ---
# name: TestCartPoleCostEqual.test_reference_tracking_snapshot.13
  0.3836648340694181
# ---
# name: TestCartPoleCostEqual.test_reference_tracking_snapshot.14
  False
# ---
# name: TestCartPoleCostEqual.test_reference_tracking_snapshot.15
  False
# ---
# name: TestCartPoleCostEqual.test_reference_tracking_snapshot.16
  dict({
    'reference': 0.0,
    'reference_constraint_error': -3.8909065530595983,
    'reference_constraint_position': 4.0,
    'reference_constraint_violated': False,
    'reference_error': 0.10909344694040175,
    'state_of_interest': 0.10909344694040175,
  })
# ---
# name: TestCartPoleCostEqual.test_reference_tracking_snapshot.17
  0.11283397455824112
# ---
# name: TestCartPoleCostEqual.test_reference_tracking_snapshot.18
  0.1373521677359711
# ---
# name: TestCartPoleCostEqual.test_reference_tracking_snapshot.19
  0.14115849335141145
# ---
# name: TestCartPoleCostEqual.test_reference_tracking_snapshot.2
  0.14343916796455297
# ---
# name: TestCartPoleCostEqual.test_reference_tracking_snapshot.20
  -0.07676570293056856
# ---
# name: TestCartPoleCostEqual.test_reference_tracking_snapshot.21
  0.0
# ---
# name: TestCartPoleCostEqual.test_reference_tracking_snapshot.22
  0.11283397455824112
# ---
# name: TestCartPoleCostEqual.test_reference_tracking_snapshot.23
  0.3635288758894405
# ---
# name: TestCartPoleCostEqual.test_reference_tracking_snapshot.24
  False
# ---
# name: TestCartPoleCostEqual.test_reference_tracking_snapshot.25
  False
# ---
# name: TestCartPoleCostEqual.test_reference_tracking_snapshot.26
  dict({
    'reference': 0.0,
    'reference_constraint_error': -3.887166025441759,
    'reference_constraint_position': 4.0,
    'reference_constraint_violated': False,
    'reference_error': 0.11283397455824112,
    'state_of_interest': 0.11283397455824112,
  })
# ---
# name: TestCartPoleCostEqual.test_reference_tracking_snapshot.27
  0.11558101791296055
# ---
# name: TestCartPoleCostEqual.test_reference_tracking_snapshot.28
  0.41483476162456334
# ---
# name: TestCartPoleCostEqual.test_reference_tracking_snapshot.29
  0.13962317929280008
# ---
# name: TestCartPoleCostEqual.test_reference_tracking_snapshot.3
  0.07894721162374557
# ---
# name: TestCartPoleCostEqual.test_reference_tracking_snapshot.30
  -0.44748678167775646
# ---
# name: TestCartPoleCostEqual.test_reference_tracking_snapshot.31
  0.0
# ---
# name: TestCartPoleCostEqual.test_reference_tracking_snapshot.32
  0.11558101791296055
# ---
# name: TestCartPoleCostEqual.test_reference_tracking_snapshot.33
  0.35567304729264104
# ---
# name: TestCartPoleCostEqual.test_reference_tracking_snapshot.34
  False
# ---
# name: TestCartPoleCostEqual.test_reference_tracking_snapshot.35
  False
# ---
# name: TestCartPoleCostEqual.test_reference_tracking_snapshot.36
  dict({
    'reference': 0.0,
    'reference_constraint_error': -3.8844189820870394,
    'reference_constraint_position': 4.0,
    'reference_constraint_violated': False,
    'reference_error': 0.11558101791296055,
    'state_of_interest': 0.11558101791296055,
  })
# ---
# name: TestCartPoleCostEqual.test_reference_tracking_snapshot.37
  0.12387771314545182
# ---
# name: TestCartPoleCostEqual.test_reference_tracking_snapshot.38
  0.5667135704060806
# ---
# name: TestCartPoleCostEqual.test_reference_tracking_snapshot.39
  0.13067344365924494
# ---
# name: TestCartPoleCostEqual.test_reference_tracking_snapshot.4
  0.0
# ---
# name: TestCartPoleCostEqual.test_reference_tracking_snapshot.40
  -0.6321720124467993
# ---
# name: TestCartPoleCostEqual.test_reference_tracking_snapshot.41
  0.0
# ---
# name: TestCartPoleCostEqual.test_reference_tracking_snapshot.42
  0.12387771314545182
# ---
# name: TestCartPoleCostEqual.test_reference_tracking_snapshot.43
  0.3115741251329508
# ---
# name: TestCartPoleCostEqual.test_reference_tracking_snapshot.44
  False
# ---
# name: TestCartPoleCostEqual.test_reference_tracking_snapshot.45
  False
# ---
# name: TestCartPoleCostEqual.test_reference_tracking_snapshot.46
  dict({
    'reference': 0.0,
    'reference_constraint_error': -3.876122286854548,
    'reference_constraint_position': 4.0,
    'reference_constraint_violated': False,
    'reference_error': 0.12387771314545182,
    'state_of_interest': 0.12387771314545182,
  })
# ---
# name: TestCartPoleCostEqual.test_reference_tracking_snapshot.47
  0.13521198455357342
# ---
# name: TestCartPoleCostEqual.test_reference_tracking_snapshot.48
  0.24856720024803347
# ---
# name: TestCartPoleCostEqual.test_reference_tracking_snapshot.49
  0.11803000341030895
# ---
# name: TestCartPoleCostEqual.test_reference_tracking_snapshot.5
  0.10958241942238534
# ---
# name: TestCartPoleCostEqual.test_reference_tracking_snapshot.50
  -0.12071230469371952
# ---
# name: TestCartPoleCostEqual.test_reference_tracking_snapshot.51
  0.0
# ---
# name: TestCartPoleCostEqual.test_reference_tracking_snapshot.52
  0.13521198455357342
# ---
# name: TestCartPoleCostEqual.test_reference_tracking_snapshot.53
  0.254255286606723
# ---
# name: TestCartPoleCostEqual.test_reference_tracking_snapshot.54
  False
# ---
# name: TestCartPoleCostEqual.test_reference_tracking_snapshot.55
  False
# ---
# name: TestCartPoleCostEqual.test_reference_tracking_snapshot.56
  dict({
    'reference': 0.0,
    'reference_constraint_error': -3.8647880154464267,
    'reference_constraint_position': 4.0,
    'reference_constraint_violated': False,
    'reference_error': 0.13521198455357342,
    'state_of_interest': 0.13521198455357342,
  })
# ---
# name: TestCartPoleCostEqual.test_reference_tracking_snapshot.6
  dict({
    'reference': 0.0,
    'reference_constraint_error': -3.8904175805776147,
    'reference_constraint_position': 4.0,
    'reference_constraint_violated': False,
    'reference_error': 0.10958241942238534,
    'state_of_interest': 0.10958241942238534,
  })
# ---
# name: TestCartPoleCostEqual.test_reference_tracking_snapshot.7
  0.10909344694040175
# ---
# name: TestCartPoleCostEqual.test_reference_tracking_snapshot.8
  0.18702638089196827
# ---
# name: TestCartPoleCostEqual.test_reference_tracking_snapshot.9
  0.14501811219702787
# ---
# name: TestCartPoleCostEqual.test_snapshot
  0.027395604855596334
# ---
# name: TestCartPoleCostEqual.test_snapshot.1
  -0.006112156024794771
# ---
# name: TestCartPoleCostEqual.test_snapshot.10
  False
# ---
# name: TestCartPoleCostEqual.test_snapshot.11
  False
# ---
# name: TestCartPoleCostEqual.test_snapshot.12
  dict({
    'reference': 0.0,
    'reference_constraint_error': -3.9727266382648994,
    'reference_constraint_position': 4.0,
    'reference_constraint_violated': False,
    'reference_error': 0.02727336173510044,
    'state_of_interest': 0.02727336173510044,
  })
# ---
# name: TestCartPoleCostEqual.test_snapshot.13
  0.03141682796673494
# ---
# name: TestCartPoleCostEqual.test_snapshot.14
  0.1589567895008271
# ---
# name: TestCartPoleCostEqual.test_snapshot.15
  0.03046562406312443
# ---
# name: TestCartPoleCostEqual.test_snapshot.16
  -0.20651144607254457
# ---
# name: TestCartPoleCostEqual.test_snapshot.17
  0.42335894938624435
# ---
# name: TestCartPoleCostEqual.test_snapshot.18
  False
# ---
# name: TestCartPoleCostEqual.test_snapshot.19
  False
# ---
# name: TestCartPoleCostEqual.test_snapshot.2
  0.03585979199113824
# ---
# name: TestCartPoleCostEqual.test_snapshot.20
  dict({
    'reference': 0.0,
    'reference_constraint_error': -3.968583172033265,
    'reference_constraint_position': 4.0,
    'reference_constraint_violated': False,
    'reference_error': 0.03141682796673494,
    'state_of_interest': 0.03141682796673494,
  })
# ---
# name: TestCartPoleCostEqual.test_snapshot.21
  0.03459596375675149
# ---
# name: TestCartPoleCostEqual.test_snapshot.22
  0.43838373784361623
# ---
# name: TestCartPoleCostEqual.test_snapshot.23
  0.02633539514167354
# ---
# name: TestCartPoleCostEqual.test_snapshot.24
  -0.6165018621732461
# ---
# name: TestCartPoleCostEqual.test_snapshot.25
  0.31643005773596056
# ---
# name: TestCartPoleCostEqual.test_snapshot.26
  False
# ---
# name: TestCartPoleCostEqual.test_snapshot.27
  False
# ---
# name: TestCartPoleCostEqual.test_snapshot.28
  dict({
    'reference': 0.0,
    'reference_constraint_error': -3.9654040362432483,
    'reference_constraint_position': 4.0,
    'reference_constraint_violated': False,
    'reference_error': 0.03459596375675149,
    'state_of_interest': 0.03459596375675149,
  })
# ---
# name: TestCartPoleCostEqual.test_snapshot.29
  0.04336363851362381
# ---
# name: TestCartPoleCostEqual.test_snapshot.3
  0.019736802905936393
# ---
# name: TestCartPoleCostEqual.test_snapshot.30
  0.5920515317536212
# ---
# name: TestCartPoleCostEqual.test_snapshot.31
  0.014005357898208616
# ---
# name: TestCartPoleCostEqual.test_snapshot.32
  -0.8391819138660229
# ---
# name: TestCartPoleCostEqual.test_snapshot.33
  0.08976015773011449
# ---
# name: TestCartPoleCostEqual.test_snapshot.34
  False
# ---
# name: TestCartPoleCostEqual.test_snapshot.35
  False
# ---
# name: TestCartPoleCostEqual.test_snapshot.36
  dict({
    'reference': 0.0,
    'reference_constraint_error': -3.956636361486376,
    'reference_constraint_position': 4.0,
    'reference_constraint_violated': False,
    'reference_error': 0.04336363851362381,
    'state_of_interest': 0.04336363851362381,
  })
# ---
# name: TestCartPoleCostEqual.test_snapshot.37
  0.05520466914869624
# ---
# name: TestCartPoleCostEqual.test_snapshot.38
  0.2751252402092573
# ---
# name: TestCartPoleCostEqual.test_snapshot.39
  -0.002778280379111842
# ---
# name: TestCartPoleCostEqual.test_snapshot.4
  dict({
    'reference': 0.0,
    'reference_constraint_error': -3.972604395144404,
    'reference_constraint_position': 4.0,
    'reference_constraint_violated': False,
    'reference_error': 0.027395604855596334,
    'state_of_interest': 0.027395604855596334,
  })
# ---
# name: TestCartPoleCostEqual.test_snapshot.40
  -0.3597216590053294
# ---
# name: TestCartPoleCostEqual.test_snapshot.41
  0.004048459369276578
# ---
# name: TestCartPoleCostEqual.test_snapshot.42
  False
# ---
# name: TestCartPoleCostEqual.test_snapshot.43
  False
# ---
# name: TestCartPoleCostEqual.test_snapshot.44
  dict({
    'reference': 0.0,
    'reference_constraint_error': -3.9447953308513037,
    'reference_constraint_position': 4.0,
    'reference_constraint_violated': False,
    'reference_error': 0.05520466914869624,
    'state_of_interest': 0.05520466914869624,
  })
# ---
# name: TestCartPoleCostEqual.test_snapshot.5
  0.02727336173510044
# ---
# name: TestCartPoleCostEqual.test_snapshot.6
  0.20717331158172525
# ---
# name: TestCartPoleCostEqual.test_snapshot.7
  0.03625452804925697
# ---
# name: TestCartPoleCostEqual.test_snapshot.8
  -0.2894451993066269
# ---
# name: TestCartPoleCostEqual.test_snapshot.9
  0.5994194824080236
# ---
